--- a/app/views/admin/mail_chimp_settings/edit.html.erb
+++ b/app/views/admin/mail_chimp_settings/edit.html.erb
@@ -6,7 +6,7 @@
 
 <h1><%= t('mailchimp_settings') %></h1>
 
-<% form_tag(admin_mail_chimp_settings_path, :method => :put, :id => :mail_chimp_settings_form) do -%>
+<%= form_tag(admin_mail_chimp_settings_path, :method => :put, :id => :mail_chimp_settings_form) do -%>
 
   <div class="yui-g">
     <div class="yui-u first">
